ping-pong/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercise-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      # volumes:
      #   - name: ping-count
      #     persistentVolumeClaim:
      #       claimName: ping-count
      containers:
      - name: ping-pong
        image: localhost/ping-pong
        imagePullPolicy: Never
        # volumeMounts:
        #   - name: ping-count
        #     mountPath: /var/ping-count
