ping-pong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
  namespace: exercise-apps
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8080
